--- a/appsettings.ini
+++ b/appsettings.ini
@@ -1,6 +1,6 @@
 
 [AWS]
-AWS_S3_BUCKET = ca-3006-final-project-bucket
-AWS_ACCESS_KEY_ID = L9Ua006CwTPR8XjUK4Wm0NHfpMOO8q+9yJh7QvOX
-AWS_SECRET_ACCESS_KEY = AKIAWDTRBQFZVJHUXQL6
-AWS_REGION = us-west-2
+AWS_S3_BUCKET =
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
+AWS_REGION =
