--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-matplotlib>=3.3.4
-pandas>=1.1.5
-scipy>=1.5.4
-seaborn>=0.11.2
-boto3>=1.18.24
-botocore>=1.21.24
+matplotlib
+pandas
+scipy
+seaborn
+boto3
